completed the functions

--- a/class16/class16-materials/bring-it-on-again/index.html
+++ b/class16/class16-materials/bring-it-on-again/index.html
@@ -12,7 +12,17 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<img src="img/bring-it-on-again.jpg" alt="Bring It On Again Movie DVD Cover">
+
+		<h1>Day of the Week</h1>
+
+		<form> 
+			<label for="day"> Day of the week: </label>
+			<input id="day" type="text" placeholder="Day of the week">
+		</form>
+
+		<button id="check" type="button" name="button">check</button>
+
+		<h2 id="placeToSee"></h2>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
