--- a/class23/class23-materials/objects-shots/index.html
+++ b/class23/class23-materials/objects-shots/index.html
@@ -12,9 +12,14 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<img src="img/worldwide-cheersmack.jpg" alt="Bring It On Worldwide Cheersmack DVD Cover">
 
-		<h2></h2>
+		<h1>Which Cocktail?</h1>
+		<input type="text" name="" value="">
+		<button type="button" name="button">Get Cocktail</button>
+
+		<h2>Name</h2>
+		<img src="" alt="">
+		<h3>Instructions</h3>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
